[package]
name = "pbrt"
version = "0.1.0"
authors = ["hoping <baihaoping@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
clap = "3.0.0-beta.2"
num_cpus = "1.13.0"
num = "0.4.0"
cfg-if = "1.0.0"